--- a/po/da_DK/countries.po
+++ b/po/da_DK/countries.po
@@ -6,13 +6,14 @@
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
+# Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-12 15:08+0000\n"
+"Last-Translator: Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1046,4 +1047,4 @@ msgstr ""
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (den franske del)"
