--- a/po/id_ID/contribute.po
+++ b/po/id_ID/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 13:58+0000\n"
+"PO-Revision-Date: 2015-12-12 22:32+0000\n"
 "Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
@@ -3777,7 +3777,7 @@ msgid ""
 "Save the CSV file with your contributions and 'contact matching' data to "
 "your local hard drive (or an accessible drive on your network) - and you are"
 " now ready for step 1 (Upload Data)."
-msgstr "Simpan berkas CSV dengan sumbangan anda dan data 'pencocokan kontak' ke lokal drive keras (atau drive terakses pada jaringan anda) - dan anda sekarang siap untuk langkah 1 (Unggah Data)."
+msgstr "Simpan berkas CSV dengan sumbangan anda dan data 'pencocokan kontak' ke lokal penggerak keras (atau penggerak terakses pada jaringan anda) - dan anda sekarang siap untuk langkah 1 (Unggah Data)."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
