--- a/po/da_DK/case.po
+++ b/po/da_DK/case.po
@@ -6,14 +6,14 @@
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2015
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
-# Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>, 2011
+# Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>, 2011,2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-12 15:13+0000\n"
+"Last-Translator: Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1215,11 +1215,11 @@ msgstr "Vis aktivitet"
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Ønsker du at <a %1>redigere den aktuelle aktivitet</a>?"
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 gemt"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
