--- a/po/da_DK/admin.po
+++ b/po/da_DK/admin.po
@@ -7,14 +7,15 @@
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2015
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # thoudahl <christian@thoudahl.com>, 2012
+# Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tine <tinethorup@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-12 15:13+0000\n"
+"Last-Translator: Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1973,7 +1974,7 @@ msgstr "Du har ikke tilladelse til at se denne skabelon"
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Skabelon for besked"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4858,7 +4859,7 @@ msgstr "Beskedskabeloner for systemets arbejdsgange bruges til at generere den e
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Workflow"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -5001,7 +5002,7 @@ msgstr "Der er ikke angivet tilvalgs-valgmulighed for denne tilvalgs-gruppe. Du 
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Aktivitetstyper"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6360,23 +6361,23 @@ msgstr "Bemærk: det valgte mærke bruges af yderligere enheder."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Installer \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Download og Installer \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Afinstaller \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Aktiver \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Deaktiver \"%1\"?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6610,7 +6611,7 @@ msgstr "Advar stedets administrator om alle nye CiviCRM-udgivelser."
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "Du kan angive indstilinger for reCAPTCHA-temaet som kommeseparerede oplysninger (f.eks.: theme:'blackglass', lang : 'fr' )."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6703,7 +6704,7 @@ msgstr "Vælg felt"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Vælg automatisk nuværende bruger"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6746,7 +6747,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "Har du registreret denne installation på CiviCRM.org? Hvis ikke, så bidrag til at styrke økosystemet omkring CiviCRM ved at bruge et par minutter på at <a href=\"%1\" target=\"_blank\">udfylde registreringsformularen</a>. De indsamlede oplysninger vil hjælpe os med at prioritere forbedringer, målrette kommunikationen og opbygge et community. Hvis du har en teknisk rolle på dette websted, så sørg for at markere \"Keep in Touch\" for at modtage de tekniske opdateringer (en postliste med lavere volume)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
