--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -9,10 +9,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-07-02 01:46+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
-"Language-Team: Swedish (http://www.transifex.com/projects/p/civicrm/language/sv/)\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2015-12-14 15:23+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr "Smet %1"
+msgstr "Bearbetningsats %1"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
@@ -110,7 +110,7 @@ msgstr "Summan av beloppen som angivits nedan stämmer inte överens med den bea
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Processed."
-msgstr ""
+msgstr "Satsen bearbetad."
 
 #: CRM/Batch/Page/Batch.php
 msgid "Batch Processing"
