--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-14 13:19+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,7 +107,7 @@ msgstr "Instanz ist reserviert"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Name"
-msgstr "Quelle des Kontaktes"
+msgstr "Kontakt (Quelle)"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Name"
