--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-14 22:24+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -436,7 +436,7 @@ msgstr "Könsinställningar"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Individual Prefixes (Ms, Mr...)"
-msgstr "Personligt prefix (Herr, Fru...)"
+msgstr "Artighetstitel (Herr, Fru...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2158,37 +2158,37 @@ msgstr "Hantera A/B-tester"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Support"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Kom igång"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Ställ en fråga"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Skaffa expert-hjälp"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Om CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Registrera din webbplats"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Gå med"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
