--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 12:43+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2015-12-14 11:32+0000\n"
+"Last-Translator: Detlev Sieber <detlev.sieber@foebud.org>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11543,7 +11543,7 @@ msgstr "Seite %1 von %2"
 
 #: CRM/Utils/Pager.php
 msgid "&lt; Previous"
-msgstr " &lt; Voheriger"
+msgstr " &lt; Vorheriger"
 
 #: CRM/Utils/Pager.php
 msgid "Next &gt;"
