--- a/po/en_GB/extension.po
+++ b/po/en_GB/extension.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-15 15:01+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,7 +81,7 @@ msgstr "Failed to determine URL for extension (%1). Please update <a href=\"%2\"
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Parse error in extension: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -99,7 +99,7 @@ msgstr "The extensions URL is not properly set. Please go to the <a href=\"%1\">
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Your extensions directory is not set or is not writable. Click <a href='%1'>here</a> to set the extensions directory."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
