--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-16 16:13+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1839,7 +1839,7 @@ msgstr "öffne CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
-msgstr "öffne CiviMail Anmeldung/Abmeldung Seiten"
+msgstr "Zugriff auf CiviMail An- und Abmelde Seiten"
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
