--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
 # Francesco Moretto <francesco@moretto.it>, 2015
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-17 17:09+0000\n"
+"Last-Translator: Alfredo Lucci <alfredolucci.al@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -76,11 +77,11 @@ msgstr "Tipo di costo"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later"
-msgstr ""
+msgstr "Il partecipante paga dopo"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is not Pay Later"
-msgstr ""
+msgstr "Il partecipante paga adesso"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant Status %1"
