--- a/po/lv_LV/menu.po
+++ b/po/lv_LV/menu.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# karlif <freibergs@jesuits.net>, 2014
+# karlif <freibergs@jesuits.net>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-07 16:41+0000\n"
+"Last-Translator: karlif <freibergs@jesuits.net>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,17 +29,17 @@ msgstr "Jauna kampaņa"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Survey"
-msgstr "Jauns pārskats"
+msgstr "Jauna aptauja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Conduct Survey"
-msgstr ""
+msgstr "Veikt aptauju"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Types"
-msgstr ""
+msgstr "Aptaujas tipi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -102,11 +102,11 @@ msgstr "Paldies"
 
 msgctxt "menu"
 msgid "Configure Survey"
-msgstr ""
+msgstr "Konfigurēt aptauju"
 
 msgctxt "menu"
 msgid "Delete Survey"
-msgstr ""
+msgstr "Dzēst aptauju"
 
 msgctxt "menu"
 msgid "CiviCase Dashboard"
@@ -209,7 +209,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Membership Section"
-msgstr ""
+msgstr "Biedru sadaļa"
 
 msgctxt "menu"
 msgid "Include Profiles"
@@ -271,7 +271,7 @@ msgstr "Iemaksas"
 
 msgctxt "menu"
 msgid "Recurring Contributions"
-msgstr ""
+msgstr "Periodiskas iemaksas"
 
 msgctxt "menu"
 msgid "Additional Info"
@@ -301,7 +301,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Update Subscription"
-msgstr ""
+msgstr "Atjaunināt abonēšanu"
 
 msgctxt "menu"
 msgid "Financial Type Accounts"
@@ -639,7 +639,7 @@ msgstr "Izvēļu grupas"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import/Export Mappings"
-msgstr ""
+msgstr "Importa/eksporta kartējumi"
 
 msgctxt "menu"
 msgid "Debugging"
@@ -831,7 +831,7 @@ msgstr "Grupas"
 
 msgctxt "menu"
 msgid "Smart Groups"
-msgstr ""
+msgstr "Viedās grupas"
 
 msgctxt "menu"
 msgid "Sunlight"
@@ -949,7 +949,7 @@ msgstr "Pārlūkot augšupielādētos failus"
 
 msgctxt "menu"
 msgid "Delete file"
-msgstr ""
+msgstr "Dzēst datni"
 
 msgctxt "menu"
 msgid "Log out"
@@ -1200,27 +1200,27 @@ msgstr "Biedru panelis"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Membership"
-msgstr "Jauns Dalībnieks"
+msgstr "Jauns biedrs"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Types"
-msgstr "Piederības tipi"
+msgstr "Biedru tipi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Status Rules"
-msgstr "Piederības statusa noteikumi"
+msgstr "Biedru statusa noteikumi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Memberships"
-msgstr "Dalībnieki"
+msgstr "Biedri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Memberships"
-msgstr ""
+msgstr "Atrast biedrus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1425,7 +1425,7 @@ msgstr "Meklēt masu SMS"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Reports"
-msgstr ""
+msgstr "Biedru atskaites"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1878,7 +1878,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Summary"
-msgstr ""
+msgstr "Biedru kopsavilkums"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1888,7 +1888,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Details"
-msgstr ""
+msgstr "Biedra detaļas"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1914,7 +1914,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Lapsed Memberships"
-msgstr ""
+msgstr "Biedri ar beigušos termiņu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
