--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 17:10+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1973,7 +1973,7 @@ msgstr "U mag dit sjabloon niet terugzetten."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Berichtsjabloon"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -4858,7 +4858,7 @@ msgstr "Berichtsjablonen voor systeemwerkstroom worden gebruikt om e-mails aan t
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Werkstroom"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -5001,7 +5001,7 @@ msgstr "Er zijn geen keuzes in deze keuzegroep. U kunt er <a href='%1'>een toevo
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Activiteittypes"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -6360,23 +6360,23 @@ msgstr "NB: het geselecteerde kenmerk wordt gebruikt bij aanvullende entiteiten.
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\" installeren?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr " \"%1\" downloaden en installeren?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "\"%1\" verwijderen?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Inschakelen \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Uitschakelen \"%1\"?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
@@ -6610,7 +6610,7 @@ msgstr "Waarschuw de beheerders over alle nieuwe CiviCRM releases."
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "U kunt de reCAPTCHA thema opties aangeven als komma gescheiden gegevens (bijvoorbeeld: thema:'blackglass', lang : 'fr' )."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -6703,7 +6703,7 @@ msgstr "Selecteer veld"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Auto-Select Current User"
-msgstr ""
+msgstr "Huidige gebruiker automatisch selecteren"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
@@ -6746,7 +6746,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "'}Heeft u deze website aangemeld bij CiviCRM.org? Indien u dit niet heeft gedaan, doe dit <a href=\"%1\" target=\"_blank\">aanmelden</a> dan in een paar minuten om CiviCRM te ondersteunen. Met deze informatie bepalen we de prioriteit van verbeteringen, kunnen we onze communicatie doelgericht doen en de gemeenschap ondersteunen. Als u een technische rol heeft binnen uw organisatie voor CiviCRM zorg er dan voor om \\\"Keep in Touch\\\" aan te vinken, u komt dan op een mailinglijst voor technische wijzigingen. (We beloven dat we hier spaarzaam gebruik van maken.)"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Enable components"
