--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -5,7 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2013
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # janharmen <jan-harmen@hotmail.com>, 2011
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 16:55+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -372,7 +372,7 @@ msgstr "Productoptie"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Fulfilled Date"
-msgstr "Datum uitgeleverd"
+msgstr "Datum afgerond"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution ID"
@@ -1727,7 +1727,7 @@ msgstr "Status gewijzigd"
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "You do not have permission to cancel subscription."
-msgstr "U hebt niet de juiste bevoegdheid om deze bijdrage te annuleren"
+msgstr "U mag deze aanmelding niet annuleren."
 
 #: CRM/Contribute/Form/UpdateBilling.php
 msgid "%1 processor doesn't support updating subscription billing details."
@@ -5155,17 +5155,17 @@ msgstr "Betaalmethode Fout"
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution."
-msgstr ""
+msgstr "U dient Afzonderlijke Lidmaatschapsbetaling in te schakelen indien een online bijdragepagina gebruikt wordt voor zowel Lidmaatschap als Periodieke Bijdrage."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page."
-msgstr ""
+msgstr "U kunt niet zowel Periodieke Bijdragen als Automatisch verlengen van lidmaatschap inschakelen voor dezelfde online bijdragepagina."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Text Color"
-msgstr ""
+msgstr "Knop tekstkleur"
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
